--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "inspectpack-duplicates-blog-examples",
   "version": "0.0.1",
   "description": "Examples for Inspectpack DuplicatesPlugin blog post.",
-  "main": "index.js",
   "author": "Ryan Roemer <ryan.roemer@formidable.com>",
   "license": "MIT",
-  "devDependencies": {
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+  "scripts": {
+    "lint": "eslint .",
+    "build-new-wp": "cd scenarios/new-webpack && webpack --config old-npm/webpack.config.js && echo TODO_OTHER_NEW_SCENARIOS",
+    "build-old-wp": "cd scenarios/old-webpack && echo TODO_OTHER_OLD_SCENARIOS",
+    "build": "yarn build-new-wp && yarn build-old-wp"
+  },
+  "dependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-formidable": "^4.0.0",
+    "eslint-plugin-filenames": "^1.2.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-promise": "^3.7.0"
   }
 }
