Add scenario new-webpack/new-npm-unflattened

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
-    "build-new-wp": "cd scenarios/new-webpack && webpack --config old-npm/webpack.config.js && webpack --config new-npm-flattened/webpack.config.js && echo TODO_OTHER_NEW_SCENARIOS",
+    "build-new-wp": "cd scenarios/new-webpack && webpack --config old-npm/webpack.config.js && webpack --config new-npm-flattened/webpack.config.js && webpack --config new-npm-unflattened/webpack.config.js",
     "build-old-wp": "cd scenarios/old-webpack && echo TODO_OTHER_OLD_SCENARIOS",
     "build": "yarn build-new-wp && yarn build-old-wp"
   },
