--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint .",
     "build-new-wp": "cd scenarios/new-webpack && webpack --config old-npm/webpack.config.js && webpack --config new-npm-flattened/webpack.config.js && webpack --config new-npm-unflattened/webpack.config.js",
-    "build-old-wp": "cd scenarios/old-webpack && echo TODO_OTHER_OLD_SCENARIOS",
+    "build-old-wp": "cd scenarios/old-webpack && webpack --config old-npm/webpack.config.js && webpack --config new-npm-flattened/webpack.config.js && webpack --config new-npm-unflattened/webpack.config.js",
     "build": "yarn build-new-wp && yarn build-old-wp"
   },
   "dependencies": {
