--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-filenames": "^1.2.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-promise": "^3.7.0"
+  },
+  "devDependencies": {
+    "duplicate-package-checker-webpack-plugin": "^3.0.0"
   }
 }
